{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 40,
  "lineage": "0f510969-e32d-2d80-b55c-e4f3caaa168d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:route-table/rtb-0b3013e6367a6be96",
            "id": "rtb-0b3013e6367a6be96",
            "owner_id": "905418110630",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "main-route-table"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "main-route-table",
              "Project": "Terraform Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c87acf6558ee6344"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418110630",
            "id": "rtb-0b3013e6367a6be96",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b37408c404f935e0",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0b3013e6367a6be96",
            "subnet_id": "subnet-038e5c7f644796236"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003d32839fac1b9b9",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0b3013e6367a6be96",
            "subnet_id": "subnet-0469c9a5dab075306"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:security-group/sg-0f517cf2c16baafe9",
            "description": "Example security group for our VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f517cf2c16baafe9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-security-group",
            "name_prefix": "",
            "owner_id": "905418110630",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "example-security-group"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "example-security-group",
              "Project": "Terraform Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c87acf6558ee6344"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418110630",
            "id": "sg-0f517cf2c16baafe9",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:subnet/subnet-038e5c7f644796236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038e5c7f644796236",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418110630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "development",
              "Name": "private-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "private-subnet",
              "Project": "Terraform Training"
            },
            "vpc_id": "vpc-0c87acf6558ee6344"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418110630",
            "id": "subnet-038e5c7f644796236",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:subnet/subnet-0469c9a5dab075306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0469c9a5dab075306",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418110630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "development",
              "Name": "public-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "public-subnet",
              "Project": "Terraform Training"
            },
            "vpc_id": "vpc-0c87acf6558ee6344"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418110630",
            "id": "subnet-0469c9a5dab075306",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:905418110630:vpc/vpc-0c87acf6558ee6344",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bddea899268e0376",
            "default_route_table_id": "rtb-070e6be1e0b83f844",
            "default_security_group_id": "sg-00e1d124405500594",
            "dhcp_options_id": "dopt-037feaf54470d39c9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c87acf6558ee6344",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070e6be1e0b83f844",
            "owner_id": "905418110630",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "development",
              "Name": "Alex-Labs-VPC"
            },
            "tags_all": {
              "Environment": "development",
              "Managed_By": "Terraform",
              "Name": "Alex-Labs-VPC",
              "Project": "Terraform Training"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418110630",
            "id": "vpc-0c87acf6558ee6344",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}